--- a/tools/IDE/app.html
+++ b/tools/IDE/app.html
@@ -65,7 +65,7 @@
         </div>
         <div class="code-editor-container">
           <div class="line-numbers" id="line-numbers">1</div>
-          <pre id="code-editor" contenteditable="true" class="language-kidlang"><code>say "Hello, KidLang!"
+          <pre id="code-editor" class="language-kidlang"><code contenteditable="true">say "Hello, KidLang!"
 set name = "Alice"
 say "Hello, " + name
 
