--- a/tools/IDE/app.html
+++ b/tools/IDE/app.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KidLang IDE</title>
+  <title>BCL IDE</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- Prism.js -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
   <!-- Login Screen -->
   <div id="login-screen" class="screen">
     <div class="login-container">
-      <h1>KidLang IDE</h1>
+      <h1>BCL IDE</h1>
       <div class="auth-buttons">
         <button id="google-login">Sign in with Google</button>
         <button id="email-login">Sign in with Email</button>
@@ -49,8 +49,8 @@
   <div id="ide-screen" class="screen hidden">
     <header>
       <div class="header-left">
-        <span class="logo">K</span>
-        <h1>KidLang IDE</h1>
+        <span class="logo">B</span>
+        <h1>BCL IDE</h1>
         <span id="user-display" class="user-email"></span>
       </div>
       <button id="ide-logout-btn">Logout</button>
@@ -60,7 +60,7 @@
       <!-- Main Editor Area -->
       <div class="editor-area">
         <div class="editor-toolbar">
-          <div class="editor-title">main.kl</div>
+          <div class="editor-title">main.bcl</div>
           <button id="run-btn">▶ Run</button>
         </div>
         <div class="code-editor-container">
